--- a/style.css
+++ b/style.css
@@ -1,5 +1,44 @@
 body {
-    font-family: sans-serif;
+    font-family: 'Arial', sans-serif;
     text-align: center;
-    margin-top: 50px;
-}
+    padding: 30px;
+    background-color: #f9f9f9;
+  }
+  
+  .input-area {
+    margin-bottom: 20px;
+  }
+  
+  input[type="text"] {
+    padding: 10px;
+    width: 200px;
+    font-size: 16px;
+  }
+  
+  button {
+    padding: 10px;
+    font-size: 16px;
+    margin-left: 5px;
+    cursor: pointer;
+  }
+  
+  ul {
+    list-style: none;
+    padding: 0;
+  }
+  
+  li {
+    padding: 10px;
+    background-color: #fff;
+    margin-bottom: 10px;
+    border: 1px solid #ddd;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  li.completed {
+    text-decoration: line-through;
+    color: gray;
+  }
+  
